--- a/nginx.conf
+++ b/nginx.conf
@@ -23,5 +23,8 @@ http {
         location /api/ {
             proxy_pass http://server:3000/;
         }      
+        location /XXX11111/firebase-config.json {
+            proxy_pass http://server:3000/chat21/config;
+        }
   }
 }
