--- a/nginx.conf
+++ b/nginx.conf
@@ -9,6 +9,11 @@ events {
 
 
 http {
+    
+  map $http_upgrade $connection_upgrade {
+        default upgrade;
+        '' close;
+  }
   server {
         listen 80;
         location / {       
@@ -22,7 +27,13 @@ http {
         }
         location /api/ {
             proxy_pass http://server:3000/;
-        }      
+        }     
+        location /ws/ {
+            proxy_pass http://server:3000/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+        }
         location /firebase-config.json {
             proxy_pass http://server:3000/chat21/config;
         }
