--- a/nginx.conf
+++ b/nginx.conf
@@ -37,5 +37,8 @@ http {
         location /firebase-config.json {
             proxy_pass http://server:3000/chat21/config;
         }
+        location /widget/ {
+            return 301 $scheme://web-widget$request_uri
+        }
   }
 }
