--- a/nginx.conf
+++ b/nginx.conf
@@ -38,7 +38,7 @@ http {
             proxy_pass http://server:3000/chat21/config;
         }
         location /widget/ {
-            return 301 $scheme://web-widget$request_uri;
+            return 301 http://web-widget$request_uri;
         }
        
       
