--- a/nginx.conf
+++ b/nginx.conf
@@ -10,6 +10,8 @@ events {
 
 http {
     
+  resolver 127.0.0.11 ipv6=off;
+    
   map $http_upgrade $connection_upgrade {
         default upgrade;
         '' close;
@@ -38,7 +40,7 @@ http {
             proxy_pass http://server:3000/chat21/config;
         }
         location /widget/ {
-            return 301 http://web-widget$request_uri;
+            return 301 $scheme://web-widget$request_uri;
         }
        
       
