--- a/nginx.conf
+++ b/nginx.conf
@@ -40,7 +40,7 @@ http {
             proxy_pass http://server:3000/chat21/config;
         }
         location /widget/ {
-            return 301 $scheme://web-widget$request_uri;
+            return 301 $scheme://web-widget/$request_uri;
         }
        
       
