dashboard-config.json

--- a/nginx.conf
+++ b/nginx.conf
@@ -39,6 +39,9 @@ http {
         location /firebase-config.json {
             proxy_pass http://server:3000/chat21/config;
         }
+        location /dashboard-config.json {
+            proxy_pass http://dashboard:80/dashboard-config.json;
+        }
         location /widget/ {
             return 301 $scheme://web-widget/$request_uri;
         }
