--- a/nginx.conf
+++ b/nginx.conf
@@ -39,8 +39,11 @@ http {
         location /firebase-config.json {
             proxy_pass http://server:3000/chat21/config;
         }        
-        location /widget/ {
+        location /widgetredirect/ {
             return 301 $scheme://web-widget/$request_uri;
+        }
+        location /widget/ {
+            proxy_pass http://web-widget:4200/;
         }
        
       
