--- a/nginx.conf
+++ b/nginx.conf
@@ -40,10 +40,10 @@ http {
             proxy_pass http://server:3000/chat21/config;
         }        
         location /widgetredirect/ {
-            return 301 $scheme://web-widget/$request_uri;
+            return 301 $scheme://webwidget/$request_uri;
         }
         location /widget/ {
-            proxy_pass http://web-widget:4200/;
+            proxy_pass http://webwidget:4200/;
         }
        
       
