--- a/nginx.conf
+++ b/nginx.conf
@@ -36,12 +36,13 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
-        location /firebase-config.json {
+        location /config.json {
             proxy_pass http://server:3000/chat21/config;
-        }        
-        location /widgetredirect/ {
-            return 301 $scheme://webwidget/$request_uri;
-        }
+        }    
+        location /widget/ {
+            proxy_pass http://webwidget:80/;
+        }     
+     
        
        
       
