--- a/nginx.conf
+++ b/nginx.conf
@@ -42,6 +42,9 @@ http {
         location /widget/ {
             proxy_pass http://webwidget:80/;
         }     
+        location /widget-config.json {
+            proxy_pass http://webwidget:80/widget-config.json;
+        }
      
        
        
