--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,18 @@ http {
         default upgrade;
         '' close;
   }
+  upstream dashboard {
+    server dashboard;
+  }
+  upstream ionic {
+    server ionic;
+  }
+  upstream server {
+    server server;
+  }
+  upstream webwidget {
+    server webwidget;
+  }
   server {
         listen 80;
         location / {       
