--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ http {
             return 301 $scheme://$host/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass http://dashboard:80/;
+            proxy_pass http://dashboard/;
         }
         location /chat/ {
             proxy_pass http://ionic:80/;
