--- a/nginx.conf
+++ b/nginx.conf
@@ -37,7 +37,7 @@ http {
             proxy_pass http://dashboard/;
         }
         location /chat/ {
-            proxy_pass http://ionic:80/;
+            proxy_pass http://ionic/;
         }
         location /api/ {
             proxy_pass http://server:3000/;
@@ -52,10 +52,10 @@ http {
             proxy_pass http://server:3000/chat21/config;
         }    
         location /widget/ {
-            proxy_pass http://webwidget:80/;
+            proxy_pass http://webwidget/;
         }     
         location /widget-config.json {
-            proxy_pass http://webwidget:80/widget-config.json;
+            proxy_pass http://webwidget/widget-config.json;
         }
      
        
