--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
     server ionic;
   }
   upstream server {
-    server server;
+    server server:3000;
   }
   upstream webwidget {
     server webwidget;
@@ -40,16 +40,16 @@ http {
             proxy_pass http://ionic/;
         }
         location /api/ {
-            proxy_pass http://server:3000/;
+            proxy_pass http://server/;
         }     
         location /ws/ {
-            proxy_pass http://server:3000/;
+            proxy_pass http://server/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
         location /config.json {
-            proxy_pass http://server:3000/chat21/config;
+            proxy_pass http://server/chat21/config;
         }    
         location /widget/ {
             proxy_pass http://webwidget/;
