--- a/nginx.conf
+++ b/nginx.conf
@@ -9,24 +9,12 @@ events {
 
 
 http {
-        
+    
+  resolver 127.0.0.11 ipv6=off;
+    
   map $http_upgrade $connection_upgrade {
         default upgrade;
         '' close;
-  }
-    
-    
-  upstream dashboard {
-    server dashboard;
-  }
-  upstream ionic {
-    server ionic;
-  }
-  upstream server {
-    server server:3000;
-  }
-  upstream webwidget {
-    server webwidget;
   }
   server {
         listen 80;
@@ -34,28 +22,28 @@ http {
             return 301 $scheme://$host/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass http://dashboard/;
+            proxy_pass http://dashboard:80/;
         }
         location /chat/ {
-            proxy_pass http://ionic/;
+            proxy_pass http://ionic:80/;
         }
         location /api/ {
-            proxy_pass http://server/;
+            proxy_pass http://server:3000/;
         }     
         location /ws/ {
-            proxy_pass http://server/;
+            proxy_pass http://server:3000/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
         location /config.json {
-            proxy_pass http://server/chat21/config;
+            proxy_pass http://server:3000/chat21/config;
         }    
         location /widget/ {
-            proxy_pass http://webwidget/;
+            proxy_pass http://webwidget:80/;
         }     
         location /widget-config.json {
-            proxy_pass http://webwidget/widget-config.json;
+            proxy_pass http://webwidget:80/widget-config.json;
         }
      
        
