--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,9 @@ http {
         location /widget-config.json {
             proxy_pass http://webwidget:80/widget-config.json;
         }
+        location /firebase-messaging-sw.js {
+            proxy_pass http://ionic:80/firebase-messaging-sw.js;
+        }
      
        
        
