added chatapi +rabbitmq

--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,12 @@ http {
         location /firebase-messaging-sw.js {
             proxy_pass http://ionic:80/firebase-messaging-sw.js;
         }
-     
+        location /chatapi/ {
+            proxy_pass http://chat21-http-server:8004/;
+        }   
+        location /mqws/ {
+            proxy_pass mqtt://rabbitmq:15675/;
+        }   
        
        
       
