--- a/nginx.conf
+++ b/nginx.conf
@@ -52,7 +52,7 @@ http {
             proxy_pass http://chat21-http-server:8004/;
         }   
         location /mqws/ {
-            proxy_pass ws://rabbitmq:15675/;
+            proxy_pass http://rabbitmq:15675/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
