--- a/nginx.conf
+++ b/nginx.conf
@@ -49,7 +49,7 @@ http {
             proxy_pass http://ionic:80/firebase-messaging-sw.js;
         }
         location /chatapi/ {
-            proxy_pass http://chat21-http-server:8004/;
+            proxy_pass http://chat21httpserver:8004/;
         }   
         location /mqws/ {
             proxy_pass http://rabbitmq:15675/;
