--- a/nginx.conf
+++ b/nginx.conf
@@ -40,6 +40,15 @@ http {
             proxy_pass http://server:3000/chat21/config;
         }    
         location /widget/ {
+            if ($request_method = OPTIONS) {
+                return 204;
+            }
+
+            add_header Access-Control-Allow-Origin *;
+            add_header Access-Control-Max-Age 3600;
+            add_header Access-Control-Expose-Headers Content-Length;
+            add_header Access-Control-Allow-Headers Range;
+            
             proxy_pass http://webwidget:80/;
         }     
         location /widget-config.json {
