--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
   server {
         listen 80;
         location / {       
-            return 301 $scheme://$host/dashboard/;
+            return 301 $scheme://$host:8081/dashboard/;
         }
         location /dashboard/ {
             proxy_pass http://dashboard:80/;
