--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,8 @@ events {
 
 
 http {
-    
+
+  client_max_body_size 200M;
   resolver 127.0.0.11 ipv6=off;
     
   map $http_upgrade $connection_upgrade {
