--- a/nginx.conf
+++ b/nginx.conf
@@ -29,16 +29,16 @@ http {
             proxy_pass http://ionic:80/;
         }
         location /api/ {
-            proxy_pass http://server:3000/;
+            proxy_pass http://srv-captain--tiledesk-server:3001/;
         }     
         location /ws/ {
-            proxy_pass http://server:3000/;
+            proxy_pass http://srv-captain--tiledesk-server:3001/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
         location /config.json {
-            proxy_pass http://server:3000/chat21/config;
+            proxy_pass http://srv-captain--tiledesk-server:3001/chat21/config;
         }    
         location /widget/ {
             if ($request_method = OPTIONS) {
