--- a/nginx.conf
+++ b/nginx.conf
@@ -23,7 +23,7 @@ http {
             return 301 $scheme://$host:8081/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass http://dashboard:80/;
+            proxy_pass http://srv-captain--tiledesk-dashboard:80/;
         }
         location /chat/ {
             proxy_pass http://ionic:80/;
