--- a/nginx.conf
+++ b/nginx.conf
@@ -23,22 +23,22 @@ http {
             return 301 $scheme://$host:8081/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass http://srv-captain--tiledesk-dashboard:80/;
+            proxy_pass http://tiledesk-dashboard.do.wearius.in.ua:80/;
         }
         location /chat/ {
             proxy_pass http://ionic:80/;
         }
         location /api/ {
-            proxy_pass http://srv-captain--tiledesk-server:3001/;
+            proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
         }     
         location /ws/ {
-            proxy_pass http://srv-captain--tiledesk-server:3001/;
+            proxy_pass http://tiledesk-server.do.wearius.in.ua:3001/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
         location /config.json {
-            proxy_pass http://srv-captain--tiledesk-server:3001/chat21/config;
+            proxy_pass http://tiledesk-server.do.wearius.in.ua:3001/chat21/config;
         }    
         location /widget/ {
             if ($request_method = OPTIONS) {
@@ -59,10 +59,10 @@ http {
             proxy_pass http://ionic:80/firebase-messaging-sw.js;
         }
         location /chatapi/ {
-            proxy_pass http://chat21httpserver:8004/;
+            proxy_pass http://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
         }   
         location /mqws/ {
-            proxy_pass http://rabbitmq:15675/;
+            proxy_pass http://tiledesk-rabbitmq.do.wearius.in.ua:15675/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
