--- a/nginx.conf
+++ b/nginx.conf
@@ -25,9 +25,9 @@ http {
         location /dashboard/ {
             proxy_pass http://tiledesk-dashboard.do.wearius.in.ua:80/;
         }
-        location /chat/ {
-            proxy_pass http://ionic:80/;
-        }
+#        location /chat/ {
+#            proxy_pass http://ionic:80/;
+ #       }
         location /api/ {
             proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
         }     
@@ -50,14 +50,14 @@ http {
             add_header Access-Control-Expose-Headers Content-Length;
             add_header Access-Control-Allow-Headers Range;
             
-            proxy_pass http://webwidget:80/;
+#            proxy_pass http://webwidget:80/;
         }     
-        location /widget-config.json {
-            proxy_pass http://webwidget:80/widget-config.json;
-        }
-        location /firebase-messaging-sw.js {
-            proxy_pass http://ionic:80/firebase-messaging-sw.js;
-        }
+ #       location /widget-config.json {
+ #           proxy_pass http://webwidget:80/widget-config.json;
+ #       }
+  #      location /firebase-messaging-sw.js {
+ #           proxy_pass http://ionic:80/firebase-messaging-sw.js;
+ #       }
         location /chatapi/ {
             proxy_pass http://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
         }   
