--- a/nginx.conf
+++ b/nginx.conf
@@ -50,11 +50,11 @@ http {
             add_header Access-Control-Expose-Headers Content-Length;
             add_header Access-Control-Allow-Headers Range;
             
-#            proxy_pass http://webwidget:80/;
+            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua:80/;
         }     
- #       location /widget-config.json {
- #           proxy_pass http://webwidget:80/widget-config.json;
- #       }
+        location /widget-config.json {
+            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua:80/widget-config.json;
+        }
         location /firebase-messaging-sw.js {
             proxy_pass http://srv-captain--tiledesk-chat21-ionic:80/firebase-messaging-sw.js;
         }
