--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,7 @@ http {
   }
   server {
         listen 80;
+        server_name tiledesk.etcetera.agency;
         location / {       
             return 301 $scheme://$host:8081/dashboard/;
         }
@@ -26,7 +27,7 @@ http {
             proxy_pass http://tiledesk-dashboard.do.wearius.in.ua:80/;
         }
         location /chat/ {
-            proxy_pass http://srv-captain--tiledesk-chat21-ionic:80/;
+            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua:80/;
         }
         location /api/ {
             proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
