--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         listen 80;
         server_name tiledesk.etcetera.agency;
         location / {       
-            return 301 $scheme://$host:8081/dashboard/;
+            return 301 $scheme://$host/dashboard/;
         }
         location /dashboard/ {
             proxy_pass http://tiledesk-dashboard.do.wearius.in.ua:80/;
