--- a/nginx.conf
+++ b/nginx.conf
@@ -18,28 +18,28 @@ http {
         '' close;
   }
   server {
-        listen 80;
+        listen 443;
         server_name tiledesk.etcetera.agency;
         location / {       
             return 301 $scheme://$host/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass http://tiledesk-dashboard.do.wearius.in.ua:80/;
+            proxy_pass https://tiledesk-dashboard.do.wearius.in.ua/;
         }
         location /chat/ {
-            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua:80/;
+            proxy_pass https://tiledesk-chat21-ionic.do.wearius.in.ua/;
         }
         location /api/ {
-            proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
+            proxy_pass https://stiledesk-server.do.wearius.in.ua:3001/;
         }     
         location /ws/ {
-            proxy_pass http://tiledesk-server.do.wearius.in.ua:3001/;
+            proxy_pass https://tiledesk-server.do.wearius.in.ua:3001/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
         location /config.json {
-            proxy_pass http://tiledesk-server.do.wearius.in.ua:3001/chat21/config;
+            proxy_pass https://tiledesk-server.do.wearius.in.ua:3001/chat21/config;
         }    
         location /widget/ {
             if ($request_method = OPTIONS) {
@@ -51,19 +51,19 @@ http {
             add_header Access-Control-Expose-Headers Content-Length;
             add_header Access-Control-Allow-Headers Range;
             
-            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua:80/;
+            proxy_pass https://tiledesk-webwidget.do.wearius.in.ua/;
         }     
         location /widget-config.json {
-            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua:80/widget-config.json;
+            proxy_pass https://tiledesk-webwidget.do.wearius.in.ua/widget-config.json;
         }
         location /firebase-messaging-sw.js {
-            proxy_pass http://srv-captain--tiledesk-chat21-ionic:80/firebase-messaging-sw.js;
+            proxy_pass https://tiledesk-chat21-ionic.do.wearius.in.ua/firebase-messaging-sw.js;
         }
         location /chatapi/ {
-            proxy_pass http://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
+            proxy_pass https://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
         }   
         location /mqws/ {
-            proxy_pass http://tiledesk-rabbitmq.do.wearius.in.ua:15675/;
+            proxy_pass https://tiledesk-rabbitmq.do.wearius.in.ua:15675/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
