--- a/nginx.conf
+++ b/nginx.conf
@@ -21,7 +21,7 @@ http {
         listen 443;
         server_name tiledesk.etcetera.agency;
         location / {       
-            return 301 $scheme://$host/dashboard/;
+            return 301 $scheme://$host:8081/dashboard/;
         }
         location /dashboard/ {
             proxy_pass https://tiledesk-dashboard.do.wearius.in.ua/;
@@ -30,16 +30,16 @@ http {
             proxy_pass https://tiledesk-chat21-ionic.do.wearius.in.ua/;
         }
         location /api/ {
-            proxy_pass https://stiledesk-server.do.wearius.in.ua:3001/;
+            proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
         }     
         location /ws/ {
-            proxy_pass https://tiledesk-server.do.wearius.in.ua:3001/;
+            proxy_pass http://tiledesk-server.do.wearius.in.ua:3001/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
         }
         location /config.json {
-            proxy_pass https://tiledesk-server.do.wearius.in.ua:3001/chat21/config;
+            proxy_pass http://tiledesk-server.do.wearius.in.ua:3001/chat21/config;
         }    
         location /widget/ {
             if ($request_method = OPTIONS) {
