--- a/nginx.conf
+++ b/nginx.conf
@@ -24,10 +24,10 @@ http {
             return 301 $scheme://$host:8081/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass https://tiledesk-dashboard.do.wearius.in.ua/;
+            proxy_pass http://tiledesk-dashboard.do.wearius.in.ua/;
         }
         location /chat/ {
-            proxy_pass https://tiledesk-chat21-ionic.do.wearius.in.ua/;
+            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua/;
         }
         location /api/ {
             proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
@@ -51,19 +51,19 @@ http {
             add_header Access-Control-Expose-Headers Content-Length;
             add_header Access-Control-Allow-Headers Range;
             
-            proxy_pass https://tiledesk-webwidget.do.wearius.in.ua/;
+            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua/;
         }     
         location /widget-config.json {
-            proxy_pass https://tiledesk-webwidget.do.wearius.in.ua/widget-config.json;
+            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua/widget-config.json;
         }
         location /firebase-messaging-sw.js {
-            proxy_pass https://tiledesk-chat21-ionic.do.wearius.in.ua/firebase-messaging-sw.js;
+            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua/firebase-messaging-sw.js;
         }
         location /chatapi/ {
-            proxy_pass https://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
+            proxy_pass http://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
         }   
         location /mqws/ {
-            proxy_pass https://tiledesk-rabbitmq.do.wearius.in.ua:15675/;
+            proxy_pass http://tiledesk-rabbitmq.do.wearius.in.ua:15675/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
