--- a/nginx.conf
+++ b/nginx.conf
@@ -24,10 +24,10 @@ http {
             return 301 $scheme://$host:8081/dashboard/;
         }
         location /dashboard/ {
-            proxy_pass http://tiledesk-dashboard.do.wearius.in.ua/;
+            proxy_pass http://tiledesk-dashboard.do.wearius.in.ua:80/;
         }
         location /chat/ {
-            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua/;
+            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua:80/;
         }
         location /api/ {
             proxy_pass http://stiledesk-server.do.wearius.in.ua:3001/;
@@ -51,13 +51,13 @@ http {
             add_header Access-Control-Expose-Headers Content-Length;
             add_header Access-Control-Allow-Headers Range;
             
-            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua/;
+            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua:80/;
         }     
         location /widget-config.json {
-            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua/widget-config.json;
+            proxy_pass http://tiledesk-webwidget.do.wearius.in.ua:80/widget-config.json;
         }
         location /firebase-messaging-sw.js {
-            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua/firebase-messaging-sw.js;
+            proxy_pass http://tiledesk-chat21-ionic.do.wearius.in.ua:80/firebase-messaging-sw.js;
         }
         location /chatapi/ {
             proxy_pass http://tiledesk-chat21httpserver.do.wearius.in.ua:8004/;
