--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
   }
   server {
         listen 80;
-        server_name tiledesk.etcetera.agency;
+        server_name tiledesk.do.wearius.in.ua;
         location / {       
             return 301 $scheme://$host:8081/dashboard/;
         }
